--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+.container{
+  color: yellowgreen;
+}
+.person-style{
+  background-color: black;
+  color: whitesmoke;
+  padding: 5px;
+  border-radius: 5px;
+  margin: 5px;
+}
